--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -269,11 +268,11 @@
             },
             "usabilitytester": {
                 definition: "Usability Test Engineers are masters of human factor elements to the best designs and easy to use application",
-                technologies: ["Creative", "Human Psychology", "QA testing", "Empathy"]
+                technologies: ["Creative", "Human Psycology", "QA testing", "Empathy"]
             },
             "uxdesigner": {
                 definition: "UX Designers are experts in user interface and the experience. They are are expert the why and what",
-                technologies: ["Psychology", "UI/UX principles", "Wireframes", "Leadership", "Communication"]
+                technologies: ["Psycology", "UI/UX principles", "Wireframes", "Leadership", "Communication"]
             },
             "utilitytech": {
                 definition: "Utility Technology Partner understand and implement cloud frameworks, CI/CD processes for smooth, secure and reliable code.",
