--- a/index.html
+++ b/index.html
@@ -117,8 +117,6 @@
             <option value="utilitytech">Utility Technology Partner</option>
         </select>
 
-
-
         <div id="results">
             <h2>Role Definition:</h2>
             <p id="definition"></p>
@@ -196,7 +194,8 @@
             },
             "frontend": {
                 definition: "Front-End Developers are the digital artists of the web, crafting visually stunning and interactive user interfaces that capture the imagination. They're the painters of the internet, turning ideas into captivating online experiences.",
-                technologies: ["HTML", "CSS", "JavaScript", "React", "Angular", "Vue.js", "Responsive Design"]
+                technologies: [ "JavaScript","HTML", "CSS", "React", "Angular", "Vue.js",  "Sass"," Less", "Webpack"," Babel", "jQuery"," Bootstrap"," Tailwind CSS", " Material UI", "Responsive Design", "ES6+", "DOM Manipulation"," AJAX"," Webpack"," Babel",
+               "GraphQL",  " RESTful APIs", "WebSockets"]
             },
             "fullstack": {
                 definition: "Full-Stack Developers are the multi-talented maestros of the web, capable of building both the front-end and back-end of applications with equal skill. They're the renaissance people of the digital world, mastering all aspects of web development.",
@@ -220,11 +219,11 @@
             },
             "productdesigner": {
                 definition: "Product Designers are the user experience visionaries of the tech world, crafting intuitive and engaging interfaces that make technology accessible to everyone. They're the champions of usability, fighting for seamless and delightful user experiences.",
-                technologies: ["UI/UX Design", "Wireframing", "Prototyping", "User Research", "Design Thinking"]
+                technologies: ["UI/UX Design", "Wireframing", "Prototyping", "User Research", "Design Thinking", " Fimga", "Adobe XD", "InVision", " Sketch", "Usability Testing", " User flows", "Information architecture", " Interaction design", "Visual Design"]
             },
             "productmanager": {
                 definition: "Product Managers are the conductors of the product symphony, orchestrating the efforts of designers, engineers, and marketers to bring successful products to market. They're the visionaries of the product world, guiding their teams towards a shared goal.",
-                technologies: ["Agile Methodologies", "Market Research", "Competitive Analysis", "Product Roadmapping"]
+                technologies: ["Agile Methodologies", "Market Research", "Competitive Analysis", "Product Roadmapping", " User research"," Data analysis", " Communication", " Stakeholder management", "Prioritization techniques", " Product analytics", " User story mapping", " A/B testing"]
             },
             "productowner": {
                 definition: "Product Owners are the voice of the customer, representing their needs and desires to the development team. They prioritize features, manage the product backlog, and ensure that the product delivers maximum value to its users.",
@@ -232,27 +231,27 @@
             },
             "qa": {
                 definition: "QA Automation Engineers are the robot wranglers of the testing world, creating automated tests that ensure software is reliable and bug-free. They're the automation experts, turning manual testing into efficient and scalable processes.",
-                technologies: ["Selenium", "JUnit", "TestNG", "CI/CD", "Scripting Languages (Python, JavaScript)"]
+                technologies: ["Selenium", "JUnit", "TestNG", "CI/CD", "Scripting Languages (Python, JavaScript)", " Robot Framework", " Cypress", " TestCafe", " Jest"," Mocha", " Chai"," Cucumber", " Behavior-Driven Development (BDD)", "Page Object Model (POM)", " Continuous Integration (CI)","Continuous Delivery (CD)"]
             },
             "qalead": {
                 definition: "QA Leads are the generals of the testing army, leading and guiding QA teams to ensure software quality and reliability. They're the strategists of the testing world, defining test plans, managing resources, and driving continuous improvement.",
-                technologies: ["Test Management", "Test Planning", "QA Methodologies", "Team Leadership"]
+                technologies: ["Test Management", "Test Planning", "QA Methodologies", "Team Leadership", "Defect tracking", "Risk Assessment"]
             },
             "qamanual": {
                 definition: "QA Manual Testers are the detectives of the software world, meticulously exploring applications to uncover bugs and ensure quality. They're the guardians of the user experience, protecting customers from frustration and disappointment.",
-                technologies: ["Test Case Design", "Exploratory Testing", "Bug Reporting", "Usability Testing"]
+                technologies: ["Test Case Design", "Exploratory Testing", "Bug Reporting", "Usability Testing", "Test documentation", " Black box testing", "White box testing", "Gray box testing"," Test management", " Usability testing", "Accessibility testing", " Security testing", " Performance testing", " Mobile testing", "Cross-browser testing"]
             },
             "releasemanager": {
                 definition: "Release Managers are the air traffic controllers of the software world, coordinating the deployment of new releases and ensuring smooth transitions for users. They're the orchestrators of the release process, keeping everything on schedule and under control.",
-                technologies: ["Release Management Tools", "CI/CD Pipelines", "Version Control", "Deployment Automation"]
+                technologies: ["Release Management Tools", "CI/CD Pipelines", "Version Control", "Deployment Automation","Jira", " Jenkins", " GitLab CI", " Azure DevOps", " Bamboo", " Chef", " Puppet", " Ansible", " Docker", " Kubernetes", "Infrastructure as Code (IaC)"]
             },
             "salesforce": {
                 definition: "Salesforce Architects are the Salesforce gurus of the CRM world, designing and implementing custom solutions that empower businesses to connect with their customers in meaningful ways. They're the CRM experts, turning business needs into scalable and effective Salesforce deployments.",
-                technologies: ["Salesforce Platform", "Apex", "Visualforce", "Lightning Components", "CRM Best Practices"]
+                technologies: ["Salesforce Platform", "Apex", "Visualforce", "Lightning Components", "CRM Best Practices", "Salesforce Lightning Design System (SLDS)", "Salesforce DX", " Salesforce APIs (REST, SOAP, Bulk)","Salesforce data model", "Salesforce security model", "SOQL and SOSL"]
             },
             "scrummaster": {
                 definition: "Scrum Masters are the agile facilitators, guiding development teams to greater productivity and collaboration using the Scrum framework. They're the zen masters of agile, helping teams remove obstacles and achieve their goals.",
-                technologies: ["Scrum Framework", "Agile Methodologies", "Facilitation Techniques", "Conflict Resolution"]
+                technologies: ["Scrum Framework", "Agile Methodologies", "Facilitation Techniques", "Conflict Resolution", " Jira", " Confluence"," Trello", " Kanban", "Lean", " Agile Metrics", " Servant Leadership"]
             },
             "sdet": {
                 definition: "SDET are the hybrid heroes of the tech world, with a cross functional expertise to not only develop but test code as well to ensure quality",
@@ -272,7 +271,7 @@
             },
             "uxdesigner": {
                 definition: "UX Designers are experts in user interface and the experience. They are are expert the why and what",
-                technologies: ["Psycology", "UI/UX principles", "Wireframes", "Leadership", "Communication"]
+                technologies: ["Psychology", "UI/UX principles", "Wireframes", "Leadership", "Communication"]
             },
             "utilitytech": {
                 definition: "Utility Technology Partner understand and implement cloud frameworks, CI/CD processes for smooth, secure and reliable code.",
