--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
         }
 
         select {
-            width: 100%;
+            width: 60%; /* Proportionate Width */
+            max-width: 400px; /* Limiting the maximum width for responsiveness */
             padding: 8px;
             margin-bottom: 10px;
             box-sizing: border-box;
@@ -156,44 +157,44 @@
                 technologies: ["Python", "R", "Machine Learning (Scikit-learn, TensorFlow)", "Statistical Modeling", "Data Visualization (Tableau, Matplotlib)", "Deep Learning", " Data mining", " Data analysis", " Machine learning algorithms", " Statistical modeling", " Predictive analytics", "Data visualization"]
             },
             "datatester": {
-                definition: "Data Testers are the quality control specialists of the data world, ensuring that data is accurate, consistent, and reliable. They are guardians of data integrity, protecting businesses from bad decisions based on flawed information.",
+                definition: "Data Testers are the quality control specialists of the data world, ensuring that data is accurate, consistent, and reliable. They're the guardians of data integrity, protecting businesses from bad decisions based on flawed information.",
                 technologies: ["SQL", "Data Validation Techniques", "ETL Testing", "Data Quality Metrics", "Data Profiling", "Data Governance", "Data Lineage", " Test automation"," Defect tracking", " Test planning", " Database testing"]
             },
             "dba": {
-                definition: "DBA Engineers are the guardians of the database kingdom, ensuring data is stored securely, efficiently, and is always available when needed. They are the protectors of the data realm, defending against corruption and unauthorized access.",
+                definition: "DBA Engineers are the guardians of the database kingdom, ensuring data is stored securely, efficiently, and is always available when needed. They're the protectors of the data realm, defending against corruption and unauthorized access.",
                 technologies: ["SQL", "Database Administration (MySQL, PostgreSQL, Oracle)", "Performance Tuning", "Backup and Recovery", "Security", "Replication", "Clustering", " Database security", " Database monitoring","Database optimization", " Backup and recovery"]
             },
             "devops": {
-                definition: "DevOps Engineers are the workflow wizards of the IT world, automating the software delivery process and bridging the gap between development and operations. They are the conductors of the software symphony, ensuring that every instrument plays in harmony.",
+                definition: "DevOps Engineers are the workflow wizards of the IT world, automating the software delivery process and bridging the gap between development and operations. They're the conductors of the software symphony, ensuring that every instrument plays in harmony.",
                 technologies: ["CI/CD (Jenkins, GitLab CI)", "Automation Tools (Ansible, Chef, Puppet)", "Cloud Platforms (AWS, Azure, GCP)", "Containerization (Docker, Kubernetes)", "Infrastructure as Code (Terraform, CloudFormation)", " Continuous integration", " Continuous delivery"," Cloud computing"," Infrastructure automation", " Monitoring and logging"]
             },
             "devsec": {
-                definition: "DevSec Engineers are the security guardians of the software world, integrating security practices into every stage of the development lifecycle. They are the knights of the digital realm, protecting applications from threats and vulnerabilities.",
+                definition: "DevSec Engineers are the security guardians of the software world, integrating security practices into every stage of the development lifecycle. They're the knights of the digital realm, protecting applications from threats and vulnerabilities.",
                 technologies: ["Security Auditing (OWASP ZAP)", "Penetration Testing (Metasploit)", "Vulnerability Scanning (Nessus)", "Security Automation", "Cloud Security", "Application Security", " Threat modeling", " Security testing", " Compliance", " Risk management"]
             },
             "ecommerce": {
-                definition: "eCommerce Certified Specialists are the digital entrepreneurs of the web, building and managing online stores that sell products and services to the world. They are the merchants of the internet, turning clicks into customers and dreams into digital empires.",
+                definition: "eCommerce Certified Specialists are the digital entrepreneurs of the web, building and managing online stores that sell products and services to the world. They're the merchants of the internet, turning clicks into customers and dreams into digital empires.",
                 technologies: ["Shopify", "Magento", "WooCommerce", "Payment Gateways (Stripe, PayPal)", "SEO", "Digital Marketing", "Customer Relationship Management (CRM)", " E-commerce platforms", " Online marketing", " Customer analytics", " Web analytics"]
             },
             "evangelist": {
-                definition: "DevOps Evangelists are the cheerleaders of the IT world, promoting collaboration, automation, and continuous improvement across development and operations teams. They are the motivators of DevOps, inspiring others to embrace new ways of working.",
+                definition: "DevOps Evangelists are the cheerleaders of the IT world, promoting collaboration, automation, and continuous improvement across development and operations teams. They're the motivators of DevOps, inspiring others to embrace new ways of working.",
                 technologies: ["DevOps Principles", "Public Speaking", "Community Building", "Technical Communication", "Agile Methodologies", "Cloud Computing", " Change management", " Training", " Mentoring"]
             },
             "experienceassurance": {
-                definition: "Experience Assurance Engineers are the champions of the user, ensuring that applications deliver a seamless and satisfying experience across all devices and platforms. They are the advocates for the user, fighting for usability and delight.",
+                definition: "Experience Assurance Engineers are the champions of the user, ensuring that applications deliver a seamless and satisfying experience across all devices and platforms. They're the advocates for the user, fighting for usability and delight.",
                 technologies: ["Usability Testing", "Performance Monitoring", "User Feedback Analysis", "Accessibility Standards (WCAG)", "A/B Testing", "Analytics Tools", " Usability testing", " Performance testing", " Accessibility testing", " User experience (UX)"]
             },
-             "frontend": {
-                definition: "Front-End Developers are the digital artists of the web, crafting visually stunning and interactive user interfaces that capture the imagination. They are the painters of the internet, turning ideas into captivating online experiences.",
+            "frontend": {
+                definition: "Front-End Developers are the digital artists of the web, crafting visually stunning and interactive user interfaces that capture the imagination. They're the painters of the internet, turning ideas into captivating online experiences.",
                 technologies: ["HTML", "CSS", "JavaScript", "React", "Angular", "Vue.js", "Sass", "Less", "Webpack", "Babel", "jQuery", "Bootstrap", "Tailwind CSS", "Material UI", "Responsive Design", "ES6+", "DOM Manipulation", "AJAX", "GraphQL", "RESTful APIs", "WebSockets","npm", "yarn", " TypeScript"," Web Accessibility Initiative (WAI)"," Progressive Web Apps (PWAs)", " cross-browser compatibility"]
             },
             "fullstack": {
-                definition: "Full-Stack Developers are the multi-talented maestros of the web, capable of building both the front-end and back-end of applications with equal skill. They are the renaissance people of the digital world, mastering all aspects of web development.",
+                definition: "Full-Stack Developers are the multi-talented maestros of the web, capable of building both the front-end and back-end of applications with equal skill. They're the renaissance people of the digital world, mastering all aspects of web development.",
                 technologies: ["HTML", "CSS", "JavaScript", "Node.js", "Python", "Java", "SQL", "NoSQL Databases", "Cloud Services (AWS, Azure, GCP)", "RESTful APIs", "GraphQL", "Docker", "Kubernetes", " Front-end development", " Back-end development", "Database management", " Cloud computing"," Software Architecture"," Testing methodologies"]
             },
             "ml": {
                 definition: "Machine Learning Engineers are the AI architects of the future, building intelligent systems that can learn, adapt, and solve complex problems. They're the innovators of the AI world, pushing the boundaries of what's possible with machine learning.",
-                technologies: ["Python", "TensorFlow", "PyTorch", "Scikit-learn", "Deep Learning", "Data Engineering", "Cloud ML Services", "Natural Language Processing (NLP)", "Computer Vision", " Machine learning algorithms", " Deep learning", " Data preprocessing", " Model deployment", "Data visualization techniques"]
+                technologies: ["Python", "R", "TensorFlow", "PyTorch", "Scikit-learn", "Deep Learning", "Data Engineering", "Cloud ML Services", "Natural Language Processing (NLP)", "Computer Vision", " Machine learning algorithms", " Deep learning", " Data preprocessing", " Model deployment", "Data visualization techniques"]
             },
             "mobilearch": {
                 definition: "Mobile Architects are the strategists of the mobile world, designing the overall structure and architecture of mobile applications. They're the masterminds behind mobile experiences, ensuring that apps are scalable, reliable, and user-friendly.",
@@ -241,31 +242,31 @@
             },
             "scrummaster": {
                 definition: "Scrum Masters are the agile facilitators, guiding development teams to greater productivity and collaboration using the Scrum framework. They're the zen masters of agile, helping teams remove obstacles and achieve their goals.",
-                technologies: ["Scrum Framework", "Agile Methodologies", "Facilitation Techniques", "Conflict Resolution", "Jira", "Confluence", "Trello", "Kanban", "Lean Principles", "Agile Metrics", "Servant Leadership", " Agile principles", " Scrum", " Kanban", " Facilitation", " Leadership", " Communication", " Empathy"]
+                technologies: ["Scrum Framework", "Agile Methodologies", "Facilitation Techniques", "Conflict Resolution", "Jira", "Confluence", "Trello", "Kanban", "Lean Principles", "Agile Metrics", "Servant Leadership", " Agile principles"," Scrum", " Kanban", " Facilitation", " Leadership", " Communication", " Empathy"]
             },
             "sdet": {
                 definition: "SDETs are the hybrid heroes of the tech world, with a cross-functional expertise to not only develop code but also test it, ensuring quality and reliability throughout the software development lifecycle.",
-                technologies: ["Java", "Python", "Selenium", "TestNG", "JUnit", "Git", "Jenkins", " REST Assured", " JMeter", " Appium", " API testing", " Code coverage"," Performance testing"]
+                technologies: ["Java", "Python", "Selenium", "TestNG", "JUnit", "Git", "Jenkins", " REST Assured", " JMeter", " Appium", " API testing", " Code coverage"," Performance testing"," Communication", "Data Structure", "Algorithm"]
             },
             "techlead": {
-                definition: "Technical Leads are the guides and mentors of development teams, providing technical expertise and leadership to ensure the successful delivery of projects. They are architects of code, problem-solvers, and champions of best practices.",
-                technologies: ["Code Design", "Code architecture", "Scaling", "Leading", "Collaboration", "Testing", "Technical Writing", " Code Review", " System Architecture", " Scalability", " Infrastructure Design", " Cloud computing", " Mentoring"]
+                definition: "Technical Leads are the guides to other engineers",
+                technologies: ["Code Design", "Code architecture", "Scaling", "Leading", "Collaboration", "Testing", "Technical Writing", " Code Review", " System Architect", " Scalablity", " Infrastructure Design", " Cloud computing", " Mentoring", "Design Patterns"]
             },
             "testlead": {
-                definition: "Test Leads are the orchestrators of the quality assurance process, planning and managing testing efforts to ensure that software meets the highest standards of quality and reliability. They are the leaders of the testing team, guiding and mentoring their team members.",
-                technologies: ["Test Planning", "Test Design", "Test Execution", "Test Automation", "Defect Tracking", "Test Management Tools", "Risk Management", "Leadership", "Communication", " Stakeholder Management"]
+                definition: "Test Leads are the orchestrators of how to test, leading teams and to make sure to find errors from testing methodologies and techniques. They are a key to quality and reliability",
+                technologies: ["Code Architecture", "Testing", "Development", " Automation Frameworks", "Leading", "Communication", " Code Design", " System Architecture", " Scalablity", " Infrastructure Design", " Cloud computing", "Data Structure", "Algorithm"]
             },
             "usabilitytester": {
-                definition: "Usability Test Engineers are the advocates for the end-user, ensuring that software is easy to use, efficient, and enjoyable. They conduct usability tests, analyze user behavior, and provide recommendations for improving the user experience.",
-                technologies: ["Usability Testing Methodologies", "User Research", "Eye-Tracking", "A/B Testing", "Heuristic Evaluation", "Cognitive Walkthrough", " Data Analytics"," Empathy"]
+                definition: "Usability Test Engineers are masters of human factor elements to the best designs and easy to use application",
+                technologies: ["Creative", "Human Psychology", "QA testing", "Empathy", " UX principles", "Human Psychology", "A/B Testing", " Data analytics", " Accessibility Principles", "Wireframing"]
             },
             "uxdesigner": {
-                definition: "UX Designers are the architects of digital experiences, crafting intuitive and engaging interfaces that meet the needs of users and achieve business goals. They combine creativity with analytical thinking to create seamless and delightful interactions.",
-                technologies: ["Psychology", "UI/UX principles", "Wireframing (Axure RP, Balsamiq)", "Prototyping (Adobe XD, InVision)", "User Research", "Information Architecture", "Interaction Design", "Data Analysis", " Wireframing", " User flows", " Information architecture"]
+                definition: "UX Designers are experts in user interface and the experience. They are are expert the why and what",
+                technologies: ["Psychology", "UI/UX principles", "Wireframes", "Leadership", "Communication", "User Research", "Information Architecture", "Interaction Design", "Data Analysis","Accessibility principles","Data Analysis"]
             },
             "utilitytech": {
-                definition: "Utility Technology Partners possess a deep understanding of cloud frameworks and implement CI/CD processes to ensure the smooth, secure, and reliable delivery of code. They are the infrastructure specialists, enabling efficient and scalable operations.",
-                technologies: ["AI Cloud", "Automation Cloud", "Machine Learning Cloud", "CI/CD", "Cloud Platforms", "Infrastructure as Code (Terraform, CloudFormation)", "Monitoring and Logging", " Microservices", " Automation", "Cloud Security"]
+                definition: "Utility Technology Partner understand and implement cloud frameworks, CI/CD processes for smooth, secure and reliable code.",
+                technologies: ["AI Cloud", "Automation Cloud", "Machine Learning Cloud", "CI/CD", "Cloud Platforms", "Infrastructure as Code", " Monitoring", " MicroServices", "Automation","CloudFormation"," Python"," Java"," C++"]
             }
         };
 
