--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             },
             "backend": {
                 definition: "Back-End Developers build and maintain the server-side logic and databases that power applications, ensuring data is processed efficiently and securely.",
-                technologies: ["Node.js", "Python (Django, Flask)", "Java (Spring Boot)", "Databases (PostgreSQL, MySQL, MongoDB)", "APIs (REST, GraphQL)", "Authentication & Authorization (OAuth, JWT)", "Serverless Computing", "Message Queues (Kafka, RabbitMQ)", "Docker", "Kubernetes", "CI/CD Pipelines (Jenkins, GitLab CI)", "Cloud Platforms (AWS, Azure, GCP)", "Testing Frameworks (JUnit, pytest)", "Caching Strategies (Redis, Memcached)"]
+                technologies: ["Java (Spring Boot)", ".NET (C#)", "Python (Django, Flask)", "Ruby on Rails", "Node.js (Express.js)", "Databases (PostgreSQL, MySQL, MongoDB, Oracle)", "APIs (REST, GraphQL)", "Authentication & Authorization (OAuth, JWT)", "Serverless Computing", "Message Queues (Kafka, RabbitMQ)", "Docker", "Kubernetes", "CI/CD Pipelines (Jenkins, GitLab CI)", "Cloud Platforms (AWS, Azure, GCP)", "Testing Frameworks (JUnit, pytest, RSpec)", "Caching Strategies (Redis, Memcached)", "C++"]
             },
             "bi": {
                 definition: "Business Intelligence Analysts analyze data to identify trends and insights that drive strategic business decisions, using visualization and reporting tools.",
@@ -217,7 +217,7 @@
             },
              "fullstack": {
                 definition: "Full-Stack Developers are proficient in both front-end and back-end development, capable of building complete applications.",
-                technologies: ["HTML", "CSS", "JavaScript", "React", "Angular", "Vue.js", "Node.js", "Python (Django, Flask)", "Java (Spring Boot)", "SQL", "NoSQL Databases (MongoDB, Cassandra)", "Cloud Services (AWS, Azure, GCP)", "RESTful APIs", "GraphQL", "Docker", "Kubernetes", "CI/CD", "Testing Frameworks", "Version Control (Git)", "Agile Methodologies", "Web Security", "Database Design", "Server Administration", "API Design"]
+                technologies: ["HTML", "CSS", "JavaScript", "React", "Angular", "Vue.js", "Node.js", "Python (Django, Flask)", "Java (Spring Boot)", ".NET (C#)", "SQL", "NoSQL Databases (MongoDB, Cassandra)", "Cloud Services (AWS, Azure, GCP)", "RESTful APIs", "GraphQL", "Docker", "Kubernetes", "CI/CD", "Testing Frameworks", "Version Control (Git)", "Agile Methodologies", "Web Security", "Database Design", "Server Administration", "API Design"]
             },
             "ml": {
                 definition: "Machine Learning Engineers develop and deploy machine learning models to solve complex problems.",
@@ -237,7 +237,7 @@
             },
             "productdesigner": {
                 definition: "Product Designers create intuitive and engaging user interfaces, focusing on usability and user satisfaction.",
-                technologies: ["UI/UX Design", "Wireframing (Sketch, Figma, Adobe XD)", "Prototyping (InVision, Marvel)", "User Research", "Design Thinking", "Interaction Design", "Visual Design", "Usability Testing", "User Flows", "Information Architecture", "Design Systems", "Accessibility (WCAG)", "A/B Testing", "User Personas", "Journey Mapping", "Analytics", "Mobile Design", "Web Design", "User Interface Design"]
+                technologies: ["UI/UX Design", "Wireframing (Sketch, Figma, Adobe XD)", "Prototyping (InVision, Marvel)", "User Research", "Design Thinking", "Interaction Design", "Visual Design", "Usability Testing", "User Flows", "User Personas", "Journey Mapping", "Accessibility (WCAG)", "A/B Testing", "User Personas", "Journey Mapping", "Analytics", "Mobile Design", "Web Design", "User Interface Design"]
             },
             "productmanager": {
                 definition: "Product Managers define product strategy, prioritize features, and guide development teams to deliver successful products.",
